After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776871 - Broken error handling in on_got_identity_for_sign_out
Broken error handling in on_got_identity_for_sign_out
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: Kerberos
3.22.x
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-01-04 17:01 UTC by Debarshi Ray
Modified: 2017-01-04 17:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
identity: Fix the error handling when signing out an identity (1.43 KB, patch)
2017-01-04 17:05 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2017-01-04 17:01:59 UTC
on_got_identity_for_sign_out in goaidentityservice.c doesn't handle errors from goa_identity_manager_get_identity_finish properly. It should set the error, complete 'operation_result' and unref it.

Right now the 'error' and 'operation_result' get leaked, and operation_result's callback is never called.
Comment 1 Debarshi Ray 2017-01-04 17:05:48 UTC
Created attachment 342881 [details] [review]
identity: Fix the error handling when signing out an identity
Comment 2 Ray Strode [halfline] 2017-01-04 17:14:28 UTC
Review of attachment 342881 [details] [review]:

looks right, thanks.
Comment 3 Debarshi Ray 2017-01-04 17:23:41 UTC
Comment on attachment 342881 [details] [review]
identity: Fix the error handling when signing out an identity

Pushed to master and gnome-3-22.

Will push to gnome-3-20 after a closer look since it doesn't apply cleanly. Looks like it also needs commit 3e551054e2