identity: Fix the error handling when signing out an identity

https://bugzilla.gnome.org/show_bug.cgi?id=776871